# ai-stenographer

./: .gitignore  AGENTS.md  AI - Stenographer.lnk  ARCHITECTURE.md  BUILDER_PLAN.md  BUILD_AUTOMATION.md  BUILD_README.txt  CLAUDE.md  CPU_ANALYSIS.md  DISTRIBUTION.md  EULA.txt  LEGAL_DOCS.md  LICENSE.txt  LICENSE_COMPLIANCE_SUMMARY.md  MILESTONES.md  PLAN.md  PLAN_REMOVE_SILENCE.md  PRIVACY_POLICY.txt  README.md  Sequence Diagram.mermaid  TODO.md  build.bat  build_distribution.py  class_diagram.mmd  client.py  commands.md  debug_duplication.py  debug_finalize_issue.py  debug_textmatcher_flow.py  download_model.py  download_models.py  main.py  monitor_cpu.py  profile_cpu.py  pytest.ini  realtime_stt_local.py  rebuild_quick.py  requirements.txt  server.py  simple_test.py  (+1 more)
client/tauri/src-tauri/: Cargo.toml  tauri.conf.json
client/tauri/src-tauri/src/: audio.rs  cli.rs  commands.rs  error.rs  focus.rs  formatting.rs  insertion.rs  keyboard.rs  lib.rs  orchestrator.rs  protocol.rs  recognition.rs  state.rs
client/tauri/src-tauri/tests/: audio_tests.rs  hotkey_tests.rs  keyboard_tests.rs  orchestrator_tests.rs  protocol_tests.rs  quickentry_tests.rs  state_tests.rs
config/: client_config.json  server_config.json  stt_config.json
docs/: MICROSOFT_STORE_PREPARATION.md  NeMo ASR minimum audio duration context length.md  NeMo Parakeet STT model hallucination.md  Nvidia-Parakeet-TDT-0.6B-v3-Audio-Segment-Specifications.md  Silence-Padding-Analysis.md  Silero-VAD-volume-dependency.md  client-server-api-spec.md  client-server.md  parakeet-ultra-short-speech-processing.md
(+444 files in other folders)
